--- a/app/src/main/res/layout/activity_result_danger.xml
+++ b/app/src/main/res/layout/activity_result_danger.xml
@@ -65,10 +65,11 @@
             <!-- Emoji Image -->
             <ImageView
                 android:id="@+id/emojiImageView"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:src="@drawable/result_100"
-                android:layout_marginEnd="16dp" />
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/result_20"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="10dp"/>
 
             <!-- Vertical Layout for Score, Icons, and Safe Message -->
             <LinearLayout
@@ -88,7 +89,7 @@
                         android:id="@+id/scoreTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="80%"
+                        android:text="0%"
                         android:fontFamily="sans-serif-black"
                         android:textColor="#333333"
                         android:textSize="48sp"
@@ -99,7 +100,7 @@
                         android:id="@+id/resultTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="/좋음"
+                        android:text="/나쁨"
                         android:textColor="#8A8A8A"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -120,21 +121,21 @@
                         android:id="@+id/mark1ImageView"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/bluemark"
+                        android:src="@drawable/redmark"
                         android:layout_marginEnd="8dp" />
 
                     <ImageView
                         android:id="@+id/mark2ImageView"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/bluemark"
+                        android:src="@drawable/redmark"
                         android:layout_marginEnd="8dp" />
 
                     <ImageView
                         android:id="@+id/mark3ImageView"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:src="@drawable/greymark" />
+                        android:src="@drawable/redmark" />
                 </LinearLayout>
 
                 <!-- Safe Message Text -->
@@ -142,7 +143,7 @@
                     android:id="@+id/safeMessageTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="해당 문자는 안전해요."
+                    android:text="해당 문자는 위험해요."
                     android:textColor="#000000"
                     android:textSize="20sp"
                     android:textStyle="bold"
